fix : 마이페이지 내 판매 내역 수정